<resources>
    <string name="app_name">CustomAlertDialogMatrix4App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="age">Age:</string>
    <string name="add">Add</string>
    <string name="id">ID:</string>
    <string name="person">person</string>
    <string name="back">Back</string>
</resources>